# bt-tvh

./: .gitignore  README.md  README.md.backup  bt-tvh.geany  pyproject.toml
src/bt_tvh_pkg/: api.py  btserve.py  tvh.py
systemd/: btTVH.service
tests/: launch.py
